2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/14_eq_bool_bool_aff_bool.deca
// Description :
//  Test de l'opération == 
// Resultats :
//    Valide 
//
// Historique :
// cree le 11/01/2024

{
    boolean bool = 12==13 ;
}