2A/05_Projet_GL/src/test/deca/context/invalid/complet/51_instanceof_boolean_object.deca
// Description :
//   instanceOf entre : boolean et Object 
// Resultats :
//    ligne 9 :  l'opération instanceOf n'est pas possible entre 'boolean' et 'Object'
// Historique :
//  cree le 16/01/2024

{
    true instanceof Object;
}